datetime_imports_forloop

--- a/01 numbers and variables.ipynb
+++ b/01 numbers and variables.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "5ef51735-0abf-4335-a885-4038a33f3ead",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# working with numbers"
    ]
@@ -552,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "id": "8739b447-6e7b-4c19-ac8b-99e9bbf818d9",
    "metadata": {},
    "outputs": [],
@@ -562,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "id": "e077d0c0-fa0f-4410-882f-a303c5ea88c1",
    "metadata": {},
    "outputs": [
@@ -572,7 +570,7 @@
        "70"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "e690e205-4587-476d-8115-533d1014ff0b",
    "metadata": {},
    "outputs": [],
@@ -593,17 +591,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "42a3ab6d-e398-4d81-8e9b-1771c548326a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "amount = amount - 20"
+    "amount - 20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "e3914d2c-4dec-4e83-8138-94220ab10125",
    "metadata": {},
    "outputs": [
@@ -613,7 +622,7 @@
        "50"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
