--- a/03 INPUT AND PRINT.ipynb
+++ b/03 INPUT AND PRINT.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "df615f7d-bb63-473c-8fff-a31044e8dd4a",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter your age wefg\n"
+      "enter your age 18\n"
      ]
     }
    ],
@@ -337,20 +337,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "f4ca9dfd-fabf-4906-9dcf-e6f9d1c18f36",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'age' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m age\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'age' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'18'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
