--- a/04 If Elif Else.ipynb
+++ b/04 If Elif Else.ipynb
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "id": "4a1d97b5-505c-4e92-9f59-e75645a172ac",
    "metadata": {},
    "outputs": [],
@@ -791,21 +791,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b7f9b4d2-b993-4adc-b31b-2eaf1bd909ff",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'marks' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m marks \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m90\u001b[39m:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m marks \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m75\u001b[39m:\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'marks' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n"
      ]
     }
    ],
@@ -2097,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "id": "91fb7e7a-1355-4745-903d-89794be6e203",
    "metadata": {},
    "outputs": [],
@@ -2131,24 +2127,24 @@
     "        loan = income*12 * 0.5\n",
     "        intrest = loan * 0.1\n",
     "        \n",
-    "        print(\"Load approved\")\n",
-    "        print(f\"Load {loan}\")\n",
-    "        print(f\"intrest {intrest}\")\n",
+    "        print(\"Loan approved\")\n",
+    "        print(f\"Loan {loan}\")\n",
+    "        print(f\"interest {interest}\")\n",
     "\n",
     "    elif credit_score > 400 and debts >= income * 0.3:\n",
     "        loan = income * 12 * 0.3\n",
-    "        intrest = loan*0.1\n",
-    "        print(\"Load approved\")\n",
-    "        print(f\"Load {loan}\")\n",
-    "        print(f\"intrest {intrest}\")\n",
+    "        interest = loan*0.1\n",
+    "        print(\"Loan approved\")\n",
+    "        print(f\"Loan {loan}\")\n",
+    "        print(f\"interest {intrest}\")\n",
     "\n",
     "    elif credit_score <= 400 and debts < income*0.3:\n",
     "        loan = income *12 * 0.5\n",
-    "        intrest = loan * 0.12\n",
+    "        interest = loan * 0.12\n",
     "        \n",
-    "        print(\"Load approved\")\n",
-    "        print(f\"Load {loan}\")\n",
-    "        print(f\"intrest {intrest}\")\n",
+    "        print(\"Loan approved\")\n",
+    "        print(f\"Loan {loan}\")\n",
+    "        print(f\"interest {interest}\")\n",
     "\n",
     "    else:\n",
     "        print(\"loan rejected\")\n",
