--- a/11 Patterns .ipynb
+++ b/11 Patterns .ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "5ec205b6-96bf-490c-b346-0b4b6bfabe7a",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 70,
    "id": "8ccf946e-f569-4258-8dd6-53c116a0011c",
    "metadata": {},
    "outputs": [
@@ -313,16 +313,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     *\n",
-      "    ***\n",
-      "   *****\n",
-      "  *******\n",
-      " *********\n",
-      "     *********\n",
-      "    *******\n",
-      "   *****\n",
-      "  ***\n",
-      " *\n"
+      "    *\n",
+      "   ***\n",
+      "  *****\n",
+      " *******\n",
+      "*********\n",
+      " *******\n",
+      "  *****\n",
+      "   ***\n",
+      "    *\n"
      ]
     }
    ],
@@ -331,7 +330,7 @@
     "n = 5\n",
     "while i < n:\n",
     "    j = 0\n",
-    "    while j < n-i:\n",
+    "    while j < n-i-1:\n",
     "        print(\" \", end= \"\")\n",
     "        j += 1\n",
     "\n",
@@ -345,10 +344,10 @@
     "    i += 1\n",
     "\n",
     "i = 0\n",
-    "n = 5\n",
+    "n = 4\n",
     "while i < n:\n",
     "    j = 0\n",
-    "    while j < n-i:\n",
+    "    while j < i+1:\n",
     "        print(\" \", end= \"\")\n",
     "        j += 1\n",
     "\n",
@@ -361,14 +360,6 @@
     "    print()\n",
     "    i += 1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9817fef6-6958-4779-923b-3a26179de87b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
