--- a/13 For Loop .ipynb
+++ b/13 For Loop .ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f00bf5e8-9b35-49d1-be44-061f08c549f1",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "a25bb45e-49e7-4271-af2b-e11d4083fced",
    "metadata": {},
    "outputs": [
@@ -163,8 +163,8 @@
    ],
    "source": [
     "course = ['franklin', 'lester', 'michael', 'trever']\n",
-    "for person in course:\n",
-    "    print('hello', person)"
+    "for people in course:\n",
+    "    print('hello', people)"
    ]
   },
   {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "29c656dd-0223-4db1-8b5d-9b83fea37688",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "59f35550-5a7f-48e2-80d3-bee4132341af",
    "metadata": {},
    "outputs": [
@@ -266,12 +266,13 @@
     "n = len(name)\n",
     "while i < n:\n",
     "    print(name[i])\n",
+    "    \n",
     "    i += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "ec00bb1d-ada1-4b68-aa8d-4497b06456be",
    "metadata": {},
    "outputs": [
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "id": "14b49ca3-1f4e-4f7d-8f89-7a39c84010fd",
    "metadata": {},
    "outputs": [
@@ -314,15 +315,787 @@
    ],
    "source": [
     "name = \"harjeet\"\n",
-    "for i in range (len(name)):\n",
+    "for i in range(len(name)):\n",
     "    #print(i)\n",
     "    print(name[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "a3d6eb13-57c6-4f62-ae81-039e20088cb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your name mohit\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m 0\n",
+      "o 1\n",
+      "h 2\n",
+      "i 3\n",
+      "t 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"enter your name\")\n",
+    "for i in range(len(name)):\n",
+    "    print(name[i], i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "ab492bd4-ed34-4cf4-911c-1f0cce6ae093",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your value mahender\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dneham\n",
+      "dneham\n",
+      "dneham\n",
+      "dneham\n",
+      "dneham\n",
+      "dneham\n",
+      "dneham\n",
+      "dneham\n",
+      "dneham\n",
+      "dneham\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"enter your value\")\n",
+    "for i in range(1, 11):\n",
+    "    print(name[0:6][::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "476fdcdc-ec2a-43ff-b454-60053eb12c4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your value 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 x 1 = 4\n",
+      "4 x 2 = 8\n",
+      "4 x 3 = 12\n",
+      "4 x 4 = 16\n",
+      "4 x 5 = 20\n",
+      "4 x 6 = 24\n",
+      "4 x 7 = 28\n",
+      "4 x 8 = 32\n",
+      "4 x 9 = 36\n",
+      "4 x 10 = 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "row= int(input(\"enter your value\"))\n",
+    "for i in range(1, 11):\n",
+    "    print(row, \"x\", i, \"=\", row*i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "91e74c42-6f28-4b58-a573-fb7bd9df9060",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your num here 8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 x 1 = 8\n",
+      "8 x 3 = 24\n",
+      "8 x 5 = 40\n",
+      "8 x 7 = 56\n",
+      "8 x 9 = 72\n",
+      "8 x 11 = 88\n",
+      "8 x 13 = 104\n",
+      "8 x 15 = 120\n",
+      "8 x 17 = 136\n",
+      "8 x 19 = 152\n"
+     ]
+    }
+   ],
+   "source": [
+    "digits= int(input(\"enter your num here\"))\n",
+    "for i in range(1,21,2):\n",
+    "    print(digits, \"x\", i, \"=\", i*digits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "c756b9a8-2592-40a6-8830-bdb6f93384ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your number please 17\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17 / 1 = 17.0\n",
+      "17 / 2 = 8.5\n",
+      "17 / 3 = 5.666666666666667\n",
+      "17 / 4 = 4.25\n",
+      "17 / 5 = 3.4\n",
+      "17 / 6 = 2.8333333333333335\n",
+      "17 / 7 = 2.4285714285714284\n",
+      "17 / 8 = 2.125\n",
+      "17 / 9 = 1.8888888888888888\n",
+      "17 / 10 = 1.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"enter your number please\"))\n",
+    "for i in range(1,11):\n",
+    "    print(num, \"/\", i, \"=\", num/i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "1c2f37db-433c-4afc-85d1-2735dae47098",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your number please 17\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17 / 1 = 17\n",
+      "17 / 2 = 8\n",
+      "17 / 3 = 5\n",
+      "17 / 4 = 4\n",
+      "17 / 5 = 3\n",
+      "17 / 6 = 2\n",
+      "17 / 7 = 2\n",
+      "17 / 8 = 2\n",
+      "17 / 9 = 1\n",
+      "17 / 10 = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"enter your number please\"))\n",
+    "for i in range(1,11):\n",
+    "    print(num, \"/\", i, \"=\", num//i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "ac22ffe6-f40d-48c0-a028-b4acd0ef2f94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15 x 1 = 15\n",
+      "15 x 2 = 30\n",
+      "15 x 3 = 45\n",
+      "15 x 4 = 60\n",
+      "15 x 5 = 75\n",
+      "15 x 6 = 90\n",
+      "15 x 7 = 105\n",
+      "15 x 8 = 120\n",
+      "15 x 9 = 135\n",
+      "15 x 10 = 150\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 15\n",
+    "for i in range(1, 11):\n",
+    "    print(n, \"x\", i, \"=\", i*n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "b581c3ce-6d50-4f03-abfc-50b48cb0977d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13 / 1 = 13\n",
+      "13 / 2 = 26\n",
+      "13 / 3 = 39\n",
+      "13 / 4 = 52\n",
+      "13 / 5 = 65\n",
+      "13 / 6 = 78\n",
+      "13 / 7 = 91\n",
+      "13 / 8 = 104\n",
+      "13 / 9 = 117\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 13\n",
+    "for i in range(1, 10):\n",
+    "    print(n, \"/\", i, \"=\", i*n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "a5056d2d-4b8a-4b34-a651-d441069aa25f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       *\n",
+      "      * *\n",
+      "     *   *\n",
+      "    *     *\n",
+      "   *       *\n",
+      "  *         *\n",
+      " *           *\n",
+      "*             *\n",
+      "***************"
+     ]
+    }
+   ],
+   "source": [
+    "num = 8\n",
+    "k = 0\n",
+    "for i in range(1, num + 1):\n",
+    "    # printing left spaces in rows\n",
+    "    for j in range(i, num):\n",
+    "        print(\" \", end=\"\")\n",
+    "\n",
+    "    while k != (2 * i - 1):\n",
+    "        # printing left/right boundaries\n",
+    "        if k == 0 or k == 2 * i - 2:\n",
+    "            print(\"*\", end=\"\")\n",
+    "        # printing spaces in the middle of the triangle\n",
+    "        else:\n",
+    "            print(\" \", end=\"\")\n",
+    "        k = k + 1\n",
+    "\n",
+    "    k = 0\n",
+    "    print()\n",
+    "\n",
+    "# printing bottom boundary of the triangle\n",
+    "for i in range(0, 2 * num - 1):\n",
+    "    print(\"*\", end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "03bb1aeb-6846-4cca-9a89-7b25b97d7f9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = ['harjeet', 'sahil', 'ujjwal']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bf5abaad-c59f-4f84-9e8a-95a52cc4abe6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'names' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m names:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(name)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'names' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for name in names:\n",
+    "    print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "93961e83-d81b-467d-919e-59409f45491f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "li = ['sahil', 'akarsh', 'ujjwal']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b0a9e7b3-0b90-4830-bb8a-fa541e7af94c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sahil\n",
+      "akarsh\n",
+      "ujjwal\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in li:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "40b11727-f870-49db-9fa4-3e4930378620",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##using file random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d88be1a9-2a50-4a5e-822a-bda71ce01e6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c5cabc89-351d-4241-9efb-6cd59a26b00d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'random.py'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"random.py\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a8568e68-297e-4872-9858-08b6fb507335",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.randint(1,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cf71bfa9-fcd4-4b9d-ab0d-480092d30b17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 6 2 1 9 2 9 5 1 6 8 4 7 6 9 "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[8, 6, 2, 1, 9, 2, 9, 5, 1, 6, 8, 4, 7, 6, 9]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li = []\n",
+    "\n",
+    "for i in range(15):\n",
+    "    num = random.randint(1, 10)\n",
+    "    print(num, end= \" \")\n",
+    "    li.append(num)\n",
+    "\n",
+    "li\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a1032c25-ca5f-49ba-97e1-5984065d1fb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 6, 2, 1, 9, 2, 9, 5, 1, 6, 8, 4, 7, 6, 9]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1783a4f1-08d7-4826-bdf7-fd8ba987f16a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5]\n",
+      "[4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "li = [2,3,4,5]\n",
+    "a= []\n",
+    "for i in li:\n",
+    "    s = i**2\n",
+    "    a.append(s)\n",
+    "\n",
+    "print(li)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1f000ac-9bfa-456b-bd55-909a3da86cbe",
+   "metadata": {},
+   "source": [
+    "# list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "89dbcfd9-5f99-47fe-a447-cf6e4f1a1ee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 3, 3, 3, 2]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = []\n",
+    "for i in range(5):\n",
+    "    a.append(random.randint(1,10))\n",
+    "\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "6211d970-744c-4366-8143-89d089ed7365",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 3, 3, 3, 2]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "fd21fcbc-8c61-4a86-9192-52029a913855",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 9, 2, 7, 3]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [random.randint(1, 10) for i in range(5)]\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "345b1600-0389-44c1-9579-38c659381321",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 3, 3, 3, 2]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "912d8483-2167-44ed-8e8e-7c662a1d162a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[64, 9, 9, 9, 4]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [i**2 for i in a]\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "9edeb4a5-b7b7-43c8-b47a-e43dc7cae4ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 3, 3, 3, 2]\n",
+      "[64, 9, 9, 9, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [i**2 for i in a]\n",
+    "print(a)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "f5e7d63c-fc38-42c8-a973-7345b145de30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 3, 3, 3, 2]\n",
+      "[64, 9, 9, 9, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [a[i]**2 for i in range(len(a))]\n",
+    "print(a)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "c2759115-6f98-4f03-bb25-9ab27ec74c9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = ['shubham', 'akash', 'abhi']\n",
+    "age = [20,30,35]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "35b6c9d2-8472-4d3d-a991-1ead030b2d84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shubham 20\n",
+      "akash 30\n",
+      "abhi 35\n"
+     ]
+    }
+   ],
+   "source": [
+    "li = []\n",
+    "for i, j in zip(name, age):\n",
+    "    print(i , j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "05962df5-2f0f-46ad-9aa7-e6ec0d45dde1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d= {}\n",
+    "for i, j in zip(name, age):\n",
+    "    d[i] = j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "d634825e-2b26-42a6-8422-37b40625dfde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'shubham': 20, 'akash': 30, 'abhi': 35}"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "6480cb90-147a-4e2c-8f89-ef3f06d590c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'shubham': 20, 'akash': 30, 'abhi': 35}"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{i: j for i, j in zip(name, age)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e6263d8-15cb-478c-a217-734e5aa9de07",
    "metadata": {},
    "outputs": [],
    "source": []
