--- a/13 For Loop .ipynb
+++ b/13 For Loop .ipynb
@@ -322,9 +322,123 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "b0739895-9e38-4857-a3b3-171604bcf053",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your name karanaujla\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "anarak\n",
+      "anarak\n",
+      "anarak\n",
+      "anarak\n",
+      "anarak\n",
+      "anarak\n",
+      "anarak\n",
+      "anarak\n",
+      "anarak\n",
+      "anarak\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"enter your name\")\n",
+    "for i in range(len(name)):\n",
+    "    print(name[0:6][::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c7af5257-32db-4e4b-973f-2be452735fca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your name karanaujla\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aljuanarak\n",
+      "aljuanarak\n",
+      "aljuanarak\n",
+      "aljuanarak\n",
+      "aljuanarak\n",
+      "aljuanarak\n",
+      "aljuanarak\n",
+      "aljuanarak\n",
+      "aljuanarak\n",
+      "aljuanarak\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"enter your name\")\n",
+    "for i in range(len(name)):\n",
+    "    print(name[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a4f21ad5-055d-43f2-8a4b-4d0a660c844f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your name sidhumoosewala\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sidhu\n",
+      "sidhu\n",
+      "sidhu\n",
+      "sidhu\n",
+      "sidhu\n",
+      "sidhu\n",
+      "sidhu\n",
+      "sidhu\n",
+      "sidhu\n",
+      "sidhu\n",
+      "sidhu\n",
+      "sidhu\n",
+      "sidhu\n",
+      "sidhu\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"enter your name\")\n",
+    "for i in range(len(name)):\n",
+    "    print(name[0:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "id": "a3d6eb13-57c6-4f62-ae81-039e20088cb1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdin",
@@ -353,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "id": "ab492bd4-ed34-4cf4-911c-1f0cce6ae093",
    "metadata": {},
    "outputs": [
@@ -361,28 +475,28 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter your value mahender\n"
+      "enter your name here Sidhumoosewala\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dneham\n",
-      "dneham\n",
-      "dneham\n",
-      "dneham\n",
-      "dneham\n",
-      "dneham\n",
-      "dneham\n",
-      "dneham\n",
-      "dneham\n",
-      "dneham\n"
+      "muhdiS\n",
+      "muhdiS\n",
+      "muhdiS\n",
+      "muhdiS\n",
+      "muhdiS\n",
+      "muhdiS\n",
+      "muhdiS\n",
+      "muhdiS\n",
+      "muhdiS\n",
+      "muhdiS\n"
      ]
     }
    ],
    "source": [
-    "name = input(\"enter your value\")\n",
+    "name = input(\"enter your name here\")\n",
     "for i in range(1, 11):\n",
     "    print(name[0:6][::-1])"
    ]
@@ -421,6 +535,42 @@
     "row= int(input(\"enter your value\"))\n",
     "for i in range(1, 11):\n",
     "    print(row, \"x\", i, \"=\", row*i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "55963a5d-0361-4750-97aa-3135d56c1481",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your number 87\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "87 x 1 = 87\n",
+      "87 x 2 = 174\n",
+      "87 x 3 = 261\n",
+      "87 x 4 = 348\n",
+      "87 x 5 = 435\n",
+      "87 x 6 = 522\n",
+      "87 x 7 = 609\n",
+      "87 x 8 = 696\n",
+      "87 x 9 = 783\n",
+      "87 x 10 = 870\n"
+     ]
+    }
+   ],
+   "source": [
+    "li= int(input(\"enter your number\"))\n",
+    "for i in range(1, 11):\n",
+    "    print(li, \"x\", i, \"=\", li*i)"
    ]
   },
   {
@@ -590,54 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "a5056d2d-4b8a-4b34-a651-d441069aa25f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       *\n",
-      "      * *\n",
-      "     *   *\n",
-      "    *     *\n",
-      "   *       *\n",
-      "  *         *\n",
-      " *           *\n",
-      "*             *\n",
-      "***************"
-     ]
-    }
-   ],
-   "source": [
-    "num = 8\n",
-    "k = 0\n",
-    "for i in range(1, num + 1):\n",
-    "    # printing left spaces in rows\n",
-    "    for j in range(i, num):\n",
-    "        print(\" \", end=\"\")\n",
-    "\n",
-    "    while k != (2 * i - 1):\n",
-    "        # printing left/right boundaries\n",
-    "        if k == 0 or k == 2 * i - 2:\n",
-    "            print(\"*\", end=\"\")\n",
-    "        # printing spaces in the middle of the triangle\n",
-    "        else:\n",
-    "            print(\" \", end=\"\")\n",
-    "        k = k + 1\n",
-    "\n",
-    "    k = 0\n",
-    "    print()\n",
-    "\n",
-    "# printing bottom boundary of the triangle\n",
-    "for i in range(0, 2 * num - 1):\n",
-    "    print(\"*\", end=\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "03bb1aeb-6846-4cca-9a89-7b25b97d7f9a",
    "metadata": {},
    "outputs": [],
@@ -647,30 +750,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "bf5abaad-c59f-4f84-9e8a-95a52cc4abe6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'names' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m names:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(name)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'names' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "harjeet\n",
+      "sahil\n",
+      "ujjwal\n"
      ]
     }
    ],
    "source": [
-    "for name in names:\n",
+    "for name in name:\n",
     "    print(name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "93961e83-d81b-467d-919e-59409f45491f",
    "metadata": {},
    "outputs": [],
@@ -680,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "b0a9e7b3-0b90-4830-bb8a-fa541e7af94c",
    "metadata": {},
    "outputs": [
@@ -711,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "d88be1a9-2a50-4a5e-822a-bda71ce01e6f",
    "metadata": {},
    "outputs": [],
@@ -721,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "c5cabc89-351d-4241-9efb-6cd59a26b00d",
    "metadata": {},
    "outputs": [
@@ -731,7 +832,7 @@
        "'random.py'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,17 +843,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "a8568e68-297e-4872-9858-08b6fb507335",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "5"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "id": "cf71bfa9-fcd4-4b9d-ab0d-480092d30b17",
    "metadata": {},
    "outputs": [
@@ -771,16 +872,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8 6 2 1 9 2 9 5 1 6 8 4 7 6 9 "
+      "2 9 10 9 4 10 3 8 3 2 6 1 1 4 4 "
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[8, 6, 2, 1, 9, 2, 9, 5, 1, 6, 8, 4, 7, 6, 9]"
+       "[2, 9, 10, 9, 4, 10, 3, 8, 3, 2, 6, 1, 1, 4, 4]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,24 +893,23 @@
     "    num = random.randint(1, 10)\n",
     "    print(num, end= \" \")\n",
     "    li.append(num)\n",
-    "\n",
-    "li\n",
-    "    "
+    "      \n",
+    "li"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "id": "a1032c25-ca5f-49ba-97e1-5984065d1fb3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[8, 6, 2, 1, 9, 2, 9, 5, 1, 6, 8, 4, 7, 6, 9]"
+       "[2, 9, 10, 9, 4, 10, 3, 8, 3, 2, 6, 1, 1, 4, 4]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 55,
    "id": "1783a4f1-08d7-4826-bdf7-fd8ba987f16a",
    "metadata": {},
    "outputs": [
@@ -854,17 +954,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "id": "89dbcfd9-5f99-47fe-a447-cf6e4f1a1ee2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[8, 3, 3, 3, 2]"
+       "[10, 1, 10, 1, 8]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,17 +979,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "id": "6211d970-744c-4366-8143-89d089ed7365",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[8, 3, 3, 3, 2]"
+       "[10, 1, 10, 1, 8]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,17 +1000,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "id": "fd21fcbc-8c61-4a86-9192-52029a913855",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[7, 9, 2, 7, 3]"
+       "[4, 3, 6, 8, 3]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,17 +1022,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
    "id": "345b1600-0389-44c1-9579-38c659381321",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[8, 3, 3, 3, 2]"
+       "[4, 3, 6, 8, 3]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,29 +1043,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "id": "912d8483-2167-44ed-8e8e-7c662a1d162a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[64, 9, 9, 9, 4]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16, 9, 36, 64, 9]\n"
+     ]
     }
    ],
    "source": [
     "l = [i**2 for i in a]\n",
-    "l"
+    "print(l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "id": "9edeb4a5-b7b7-43c8-b47a-e43dc7cae4ee",
    "metadata": {},
    "outputs": [
@@ -973,8 +1070,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8, 3, 3, 3, 2]\n",
-      "[64, 9, 9, 9, 4]\n"
+      "[4, 3, 6, 8, 3]\n",
+      "[16, 9, 36, 64, 9]\n"
      ]
     }
    ],
@@ -986,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
    "id": "f5e7d63c-fc38-42c8-a973-7345b145de30",
    "metadata": {},
    "outputs": [
@@ -994,8 +1091,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8, 3, 3, 3, 2]\n",
-      "[64, 9, 9, 9, 4]\n"
+      "[4, 3, 6, 8, 3]\n",
+      "[16, 9, 36, 64, 9]\n"
      ]
     }
    ],
@@ -1007,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 65,
    "id": "c2759115-6f98-4f03-bb25-9ab27ec74c9a",
    "metadata": {},
    "outputs": [],
@@ -1018,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 113,
    "id": "35b6c9d2-8472-4d3d-a991-1ead030b2d84",
    "metadata": {},
    "outputs": [
@@ -1035,24 +1132,82 @@
    "source": [
     "li = []\n",
     "for i, j in zip(name, age):\n",
-    "    print(i , j)"
+    "    print(i, j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 135,
+   "id": "d421d48f-966f-4e68-80e3-d72df5921467",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rohan maths\n",
+      "ashu english\n",
+      "abdul science\n"
+     ]
+    }
+   ],
+   "source": [
+    "course = [\"maths\", \"english\", \"science\"]\n",
+    "stu = [\"rohan\", \"ashu\", \"abdul\"]\n",
+    "\n",
+    "we =[]\n",
+    "for i, h in zip(stu, course):\n",
+    "    print(i, h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "5641ac20-2d6a-4948-ba5d-5c276fbb1525",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = {}\n",
+    "for i, h in zip(stu, course):\n",
+    "    f[i]= h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "df0193f4-204c-4440-b66d-5b0fef4edfa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'rohan': 'maths', 'ashu': 'english', 'abdul': 'science'}"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "id": "05962df5-2f0f-46ad-9aa7-e6ec0d45dde1",
    "metadata": {},
    "outputs": [],
    "source": [
     "d= {}\n",
     "for i, j in zip(name, age):\n",
-    "    d[i] = j"
+    "    d[i]= j"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 138,
    "id": "d634825e-2b26-42a6-8422-37b40625dfde",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1217,7 @@
        "{'shubham': 20, 'akash': 30, 'abhi': 35}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 141,
    "id": "6480cb90-147a-4e2c-8f89-ef3f06d590c5",
    "metadata": {},
    "outputs": [
@@ -1083,7 +1238,7 @@
        "{'shubham': 20, 'akash': 30, 'abhi': 35}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,10 +1250,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e6263d8-15cb-478c-a217-734e5aa9de07",
+   "id": "3f51456b-ec82-4281-83ee-07613885f682",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "typ"
+   ]
   }
  ],
  "metadata": {
