--- a/14 import .ipynb
+++ b/14 import .ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "747b0580-397d-4a1a-a3b5-0e09a0124c37",
    "metadata": {},
    "outputs": [],
@@ -68,17 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "55d6f4e0-6ee3-4dbf-83db-e576ac8287c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "19"
+       "14"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "60d76e47-b596-4a4e-ad61-bcd87d74e3de",
    "metadata": {},
    "outputs": [],
@@ -208,17 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "87c05a18-9a28-4cf5-b553-a969d615ed42",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2025, 8, 19, 13, 14, 18, 604846)"
+       "datetime.datetime(2025, 8, 19, 17, 34, 42, 642157)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "b2026b4e-6383-4082-a695-6735a69b6a83",
    "metadata": {},
    "outputs": [],
@@ -239,17 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "9d5244e3-8943-4d19-b4ba-1c35a1d1a5e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2025, 8, 19, 13, 15, 10, 692657)"
+       "datetime.datetime(2025, 8, 19, 17, 34, 43, 80986)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "bef37f92-231c-44c3-a36d-204805d4890f",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
        "19"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "05bfb075-423b-4dc8-b649-49def4f7cecd",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "datetime.date(2025, 8, 19)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,17 +310,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "5be9cd15-fb48-4136-8fcf-7d5b6c3ccb22",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "17"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "cace4cbf-40c0-418d-a725-2c1eb6573a89",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
        "datetime.datetime(9999, 12, 31, 23, 59, 59, 999999)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "f7637be4-a71e-464b-83bf-4ffe3f4efb74",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
        "datetime.datetime(1, 1, 1, 0, 0)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "9d3c93e0-b3b5-4d7e-ac06-1c49eaf04abc",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
        "datetime.date(2025, 8, 19)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,17 +394,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "ff8ed3cb-9dcb-49cd-aff0-0b18f537ae53",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.time(13, 15, 10, 692657)"
+       "datetime.time(17, 34, 43, 80986)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "4cc8f312-ec2d-4443-a0ac-f13c47303980",
    "metadata": {},
    "outputs": [],
@@ -446,80 +446,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "7d1c47bc-c4f0-4f96-b3e7-e30bb9fc0141",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'05'"
+       "'2005'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datetime.strftime(d, '%y')"
+    "datetime.strftime(d, '%Y')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "id": "46b922d4-0276-424c-aaf1-1b6d6cef346c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'15 - August - 2005'"
+       "'15- August - 2005'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datetime.strftime(d, \"%d - %B - %Y\")"
+    "datetime.strftime(d, \"%d- %B - %Y\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "id": "fceb244e-79c0-47a4-a87a-23026e7000f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'19 - Tuesday - August - 2025'"
+       "'19 - August - 2025 - Tuesday'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datetime.strftime(datetime.now(), \"%d - %A - %B - %Y\")"
+    "datetime.strftime(datetime.now(), \"%d - %B - %Y - %A\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "id": "8fb564e5-a433-4167-98a2-d6cd97810ece",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[4]"
+       "[8]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,8 +530,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 98,
+   "id": "9590f2f0-0bfa-4763-be92-b6176d4ab1b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = datetime(2004, 11, 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "0e1eb284-09f2-4a78-9b54-29f393d6c582",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'30- November- 2004- Tuesday'"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.strftime(p, \"%d- %B- %Y- %A\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "2bb4dbd6-b2f8-4ce6-8bdb-4421722a286c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'*f'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.strftime(datetime.now(), \"*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9b5854cf-3227-4e7d-8252-086a4bdc5798",
+   "id": "305bfa0f-0535-4206-ac29-0b34825e4fa9",
    "metadata": {},
    "outputs": [],
    "source": []
