--- a/15 Functions .ipynb
+++ b/15 Functions .ipynb
@@ -799,38 +799,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "id": "ec00205f-6aa6-4014-a37d-33fc367692b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def greeting(age, name= \"user\"):\n",
+    "def greeting(age, name=\"user\"):\n",
     "    return age, name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "c5c88f4a-d8e3-452b-ab04-f7e591f1af76",
+   "execution_count": 63,
+   "id": "05a96655-33b5-4537-9b53-b162ab0404f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(77, 'user')"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "age, name = greeting(25)"
+    "greeting(77)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 66,
+   "id": "29bc7f45-ca0f-49d8-99e0-15db86875345",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age, name=greeting(77)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "id": "42b1a01a-7797-4b17-8423-af1f6005fca7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "25"
+       "77"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
    "id": "5958c36a-dc74-4769-b125-48a5492c7943",
    "metadata": {},
    "outputs": [
@@ -851,7 +872,7 @@
        "'user'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,18 +883,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "id": "e1820f21-f816-41b0-807a-4b2f04b0c7ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_palindrom(n):\n",
+    "def check_palindrome(n):\n",
     "    return str(n)== str(n)[::-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 76,
    "id": "b2a49575-7129-4d60-b206-ef6d75b9794f",
    "metadata": {},
    "outputs": [
@@ -883,29 +904,61 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "check_palindrom(525)"
+    "check_palindrome(525)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 128,
+   "id": "989cbda5-7066-41d3-a95e-880254b7d083",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_palindrome(n):\n",
+    "    return str(n)== str(n)[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "63bbd1eb-ade1-43f3-bc0e-f65f3cac1b86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_palindrome(989)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "id": "9755f642-9477-428c-b6b1-da4243f9ac9d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_palindrom(n):\n",
+    "def check_palindrome(n):\n",
     "    return str(n).strip().lower()== str(n)[::-1].strip().lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 108,
    "id": "93c957fc-f1a7-43a9-b943-89e041040dd5",
    "metadata": {},
    "outputs": [
@@ -915,18 +968,18 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "check_palindrom(\"shs\")"
+    "check_palindrome(\"shs\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 106,
    "id": "35826f06-3f1b-4ebe-bd18-7cabaa74acef",
    "metadata": {},
    "outputs": [
@@ -936,30 +989,30 @@
        "False"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "check_palindrom(\"shr\")"
+    "check_palindrome(\"shr\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 113,
    "id": "887816c0-cd4e-4266-81c8-2d0f15e518f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_palindrom(n=None):\n",
+    "def check_palindrome(n=None):\n",
     "    n= n or input()\n",
     "    return str(n).strip().lower()== str(n)[::-1].strip().lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 114,
    "id": "56823508-d3ab-4657-9ba6-b358d31828c9",
    "metadata": {},
    "outputs": [
@@ -967,7 +1020,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 121\n"
+      " 343\n"
      ]
     },
     {
@@ -976,13 +1029,53 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "check_palindrom()"
+    "check_palindrome()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "e5393c10-67d9-4ce5-a423-ed37cdfeda65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_palindrome(n=None):\n",
+    "    n= n or input()\n",
+    "    return str(n).strip().lower()== str(n)[::-1].strip().lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "28f191bf-ad03-4d05-b72a-c9af96d4a974",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 84\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_palindrome()"
    ]
   },
   {
@@ -1019,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 148,
    "id": "c6c64e61-1d40-4a01-b2f8-911ebf58f5bc",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1122,7 @@
        "60"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 153,
    "id": "62ab9fa9-adbe-4b15-8387-62fffdfe3237",
    "metadata": {},
    "outputs": [
@@ -1050,7 +1143,7 @@
        "20"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 177,
    "id": "516fc3a3-2fe6-4ba2-bc91-80b130bdee9d",
    "metadata": {},
    "outputs": [],
@@ -1075,23 +1168,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 178,
    "id": "07089737-8235-4b1b-a11a-e579292151cc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "checkPrime(25)"
+    "checkPrime(28)"
    ]
   },
   {
@@ -1132,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 192,
    "id": "ca38d9f9-947a-47f0-9684-3368bd239d23",
    "metadata": {},
    "outputs": [],
@@ -1142,12 +1235,12 @@
     "        print(n, i, n%i)\n",
     "        if n%i == 0:\n",
     "            return False\n",
-    "        return True"
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 195,
    "id": "db01d0c1-e1f4-4400-a37f-0d9e6431d9af",
    "metadata": {},
    "outputs": [
@@ -1155,27 +1248,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14 2 0\n"
+      "11 2 1\n",
+      "11 3 2\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "checkPrime(14)"
+    "checkPrime(11)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 190,
    "id": "fd860ebe-7126-4b19-bdcd-ef8992ee4cd4",
    "metadata": {},
    "outputs": [],
@@ -1187,13 +1281,13 @@
     "        print(n, i, n%i)\n",
     "        if n%i == 0:\n",
     "            return False\n",
-    "        return True\n",
+    "    return True\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 201,
    "id": "0627eac9-7f64-4ea2-a314-482466ac96cb",
    "metadata": {},
    "outputs": [
@@ -1201,16 +1295,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55 2 1\n"
+      "55 2 1\n",
+      "55 3 1\n",
+      "55 4 3\n",
+      "55 5 0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "id": "f336a001-2b4e-40fa-8518-d32ef6365acd",
    "metadata": {},
    "outputs": [],
@@ -1234,33 +1331,56 @@
     "        if checkPrime(n):\n",
     "            l.append(n)\n",
     "    \n",
-    "            return l   "
+    "    return l   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "id": "51251b11-a63f-4102-8fda-49c0748f8d86",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 2 0\n",
+      "11 2 1\n",
+      "11 3 2\n",
+      "12 2 0\n",
+      "13 2 1\n",
+      "13 3 1\n",
+      "14 2 0\n",
+      "15 2 1\n",
+      "15 3 0\n",
+      "16 2 0\n",
+      "17 2 1\n",
+      "17 3 2\n",
+      "17 4 1\n",
+      "18 2 0\n",
+      "19 2 1\n",
+      "19 3 1\n",
+      "19 4 3\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[11]"
+       "[11, 13, 17, 19]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "primeInRange(10,50)"
+    "primeInRange(10,20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 37,
    "id": "b936671a-2604-4b02-b06a-1b391bc91992",
    "metadata": {},
    "outputs": [],
@@ -1277,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 232,
    "id": "aba20079-e787-4155-bdda-d9f783932978",
    "metadata": {},
    "outputs": [
@@ -1297,13 +1417,416 @@
        "False"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "checkPrime(55)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "id": "6bd2a8a3-198a-4847-ba53-d77d999a6dc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def checkPrime(n):\n",
+    "    for i in range(2, int(n**(1/2))+1):\n",
+    "        print(n, i, n%i)\n",
+    "        if n%i == 0:\n",
+    "            return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "id": "63200139-9bb4-4a9d-a47f-8493d225e990",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89 2 1\n",
+      "89 3 2\n",
+      "89 4 1\n",
+      "89 5 4\n",
+      "89 6 5\n",
+      "89 7 5\n",
+      "89 8 1\n",
+      "89 9 8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "checkPrime(89)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "0163234c-4c38-49f2-a17d-285f34c77b10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "map"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "2a99dba1-b917-4b51-9e21-b50ba84deb35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def makeSqure(n):\n",
+    "    return n**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "4c77f7c3-14b1-4be6-9a96-6de133accd6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,3]\n",
+    "b = [\"a\", \"b\", \"c\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "7baf968c-941c-4941-9745-3495e13d3a29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 a\n",
+      "2 b\n",
+      "3 c\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, j in zip(a,b):\n",
+    "    print(i, j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "9142cdd8-e370-42a0-9d1b-52efe7c0ad2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "1cfddfc5-8de4-4efd-a049-fe5e922cc28b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ans= list(map(makeSqure, a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "ade8a286-15cb-45cc-831f-9d35706097b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "48872e51-6754-4bd4-9c10-efb29093cf13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['harjeet', 'jangra']"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"harjeet jangra\".split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "4548f81a-9e4f-4a6d-b9ac-88bf59f388f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a= \"5 6 7 8 9\".split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "aaaa571b-dc92-49d6-b6dc-34f8ccf7fe05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['5', '6', '7', '8', '9']"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "0368a924-8d2a-410a-a28a-4c780c589cd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ans = list(map(int, a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "a4f8ee20-f2be-42e6-b626-7275bfe33287",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "e73f52a3-b126-4ac7-8477-59a13df99bd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a= \"5, 6, 7, 8, 9\".split(\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "3ad45d98-3f69-43ca-aad6-96f9bb97236c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['5', ' 6', ' 7', ' 8', ' 9']"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "68c85670-24bd-423a-abfb-4374849964c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = lambda x, y: x*y="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "b060ff8f-bbee-4d63-b7df-4c827f8a7096",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z(5,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "cd369528-397a-4a52-9e31-ca9cbd684833",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z= lambda x: x**3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "98b24114-923b-4ee4-a3fb-80da56c4fc17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [5, 6, 7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "5a16cc48-795f-4a9e-b61b-427f7770cb18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[125, 216, 343]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(z, a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "c3f8482c-7810-4961-8089-6c1272904dc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = lambda x, y: x*y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "7ababc32-dc62-4733-9557-929a750ac36d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [5, 6, 7, 8, 9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "cf90fdc6-2b33-47e3-bd56-3b0203bf3c0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = [10, 20, 30, 40, 50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "1867b6a8-f505-45d6-80b2-4577cbfcebd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[50, 120, 210, 320, 450]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(z, a, b))"
    ]
   }
  ],
